# installwatch-darwin

./: .gitignore
installwatch/: .gitignore  AUTHORS  Makefile  configure.ac  create-localdecls  create-localdecls-darwin  installwatch  installwatch.c  test-installwatch.c
installwatch/include/: .gitignore
installwatch/src/: Makefile.am  installwatch.c  installwatch.sh_in
installwatch/tests/: Makefile.am  insttest_installwatch.sh_in  test-installwatch.c
